--- a/index.html
+++ b/index.html
@@ -1,21 +1,119 @@
-/* ربط ألوان الجهتين والبراويز بحركة قوس قزح */
-.side-panel, #royal-clock, .input-area {
-    border-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet) 1;
-    animation: rainbow-border 3s linear infinite;
-}
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>👑 مملكة علوش - الإصدار الملياري 👑</title>
+    <style>
+        /* 1. التأسيس اللوني والتزامن (Rainbow Sync) */
+        :root { --gold: #ffd700; --royal-red: #8b0000; }
+        body { margin: 0; background: #000; color: white; font-family: 'Segoe UI', Tahoma, sans-serif; overflow: hidden; }
 
-@keyframes rainbow-border {
-    0% { filter: hue-rotate(0deg); border-color: red; box-shadow: 0 0 15px red; }
-    50% { filter: hue-rotate(180deg); border-color: blue; box-shadow: 0 0 25px blue; }
-    100% { filter: hue-rotate(360deg); border-color: red; box-shadow: 0 0 15px red; }
-}
+        /* 2. الخلفية الكونية (النجوم والشهب) */
+        #star-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -2; background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%); }
+        .star { position: absolute; background: white; border-radius: 50%; animation: twinkle var(--duration) infinite; }
+        @keyframes twinkle { 0%, 100% { opacity: 0.3; transform: scale(1); } 50% { opacity: 1; transform: scale(1.2); } }
 
-/* تزامن نصوص العناوين مع ألوان الملك */
-.panel-title {
-    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    animation: rainbow-flow 3s linear infinite;
-    text-shadow: none; /* إزالة الظل القديم لزيادة وضوح اللون */
-}
+        /* 3. الساعة الملكية المتزامنة */
+        #royal-clock { position: fixed; top: 10px; left: 50%; transform: translateX(-50%); color: var(--gold); font-size: 22px; font-weight: bold; background: rgba(0,0,0,0.8); padding: 5px 25px; border-radius: 50px; border: 2px solid var(--gold); z-index: 3000; animation: rainbow-border 3s linear infinite; }
+
+        /* 4. رسالة الترحيب الصامتة */
+        #welcome-msg { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(0,0,0,0.9); border: 5px double var(--gold); padding: 40px; z-index: 9999; text-align: center; border-radius: 20px; animation: fadeInOut 5s forwards; box-shadow: 0 0 50px red; }
+        @keyframes fadeInOut { 0% {opacity:0;} 20% {opacity:1;} 80% {opacity:1;} 100% {opacity:0; visibility:hidden;} }
+
+        /* 5. الأجنحة الجانبية (المتصلين والإعدادات) */
+        .side-panel { position: fixed; top: 70px; width: 200px; height: calc(100% - 180px); background: rgba(0,0,0,0.85); border: 2px solid var(--gold); padding: 15px; z-index: 1000; border-radius: 15px; animation: rainbow-border 3s linear infinite; }
+        #users-panel { right: 10px; }
+        #settings-panel { left: 10px; }
+        .panel-title { color: var(--gold); border-bottom: 1px double var(--gold); text-align: center; padding-bottom: 5px; margin-bottom: 15px; animation: rainbow-text 3s linear infinite; }
+
+        /* 6. الشات والبساط والاسم المشع واللاوات */
+        #chat-container { margin: 0 220px; height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; }
+        #messages { overflow-y: auto; padding: 20px; margin-bottom: 100px; }
+        .royal-carpet { background: linear-gradient(90deg, transparent, rgba(139,0,0,0.9), transparent); border-top: 1px solid var(--gold); border-bottom: 1px solid var(--gold); padding: 15px; margin: 10px 0; box-shadow: 0 0 15px rgba(255,0,0,0.5); }
+        .royal-name { font-weight: bold; background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 400%; animation: rainbow-flow 3s linear infinite; }
+        .laawat { color: var(--gold); }
+
+        /* 7. الإيموجيات بنص الشاشة */
+        #emoji-list { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80%; max-height: 400px; background: rgba(0,0,0,0.95); border: 3px double var(--gold); z-index: 5000; padding: 20px; display: none; grid-template-columns: repeat(auto-fill, minmax(45px, 1fr)); border-radius: 20px; }
+
+        /* 8. منطقة الإدخال (الزر المقلوب والزخرفة) */
+        .input-area { position: fixed; bottom: 0; width: 100%; display: flex; flex-direction: row-reverse; background: rgba(0,0,0,0.9); padding: 15px; border-top: 2px solid var(--gold); gap: 10px; z-index: 3000; animation: rainbow-border 3s linear infinite; }
+        #msg-in { flex: 1; padding: 12px; border-radius: 25px; background: #111; color: white; border: 1px solid var(--gold); outline: none; }
+        #send-btn { transform: scaleX(-1); background: linear-gradient(45deg, #8b0000, #ff0000); color: gold; border: 2px solid gold; padding: 10px 30px; border-radius: 25px; cursor: pointer; font-weight: bold; }
+
+        /* 9. تأثيرات الأكشن (برق، رعد، زلزال) */
+        #flash { position: fixed; top:0; left:0; width:100%; height:100%; background:white; opacity:0; z-index:10000; pointer-events:none; }
+        .flash-active { animation: flash-anim 0.4s ease-out; }
+        .shake-active { animation: shake 0.5s infinite; }
+        @keyframes flash-anim { 0%, 100% {opacity:0;} 20%, 50% {opacity:0.8;} }
+        @keyframes shake { 0% {transform:translate(2px,2px);} 50% {transform:translate(-3px,-2px);} }
+        @keyframes rainbow-border { 0%, 100% { border-color: red; box-shadow: 0 0 10px red; } 50% { border-color: blue; box-shadow: 0 0 20px blue; } }
+        @keyframes rainbow-flow { 0% { background-position: 0%; } 100% { background-position: 100%; } }
+    </style>
+</head>
+<body onload="initKingdom()">
+    <div id="star-container"></div>
+    <div id="flash"></div>
+    <div id="royal-clock">🕒 00:00:00</div>
+    <div id="welcome-msg">👑<br>أهلاً بك في عرش الملك علوش<br>👑</div>
+    <div id="emoji-list"></div>
+
+    <div id="users-panel" class="side-panel"><div class="panel-title">𓆩 المتصلين 𓆪</div><div id="user-list"></div></div>
+    <div id="settings-panel" class="side-panel"><div class="panel-title">𓆩 الإعدادات 𓆪</div><button style="width:100%;" onclick="alert('تم تفعيل الحماية الملكية 🛡️')">نظام الحماية</button></div>
+
+    <div id="chat-container">
+        <div id="messages"></div>
+        <div class="input-area">
+            <button id="send-btn" onclick="send()">إرسال ⟸</button>
+            <input type="text" id="msg-in" placeholder="ـﮩﮩ٨ﮩﮩ👑 مرسوم الملك علوش 👑ﮩﮩ٨ﮩﮩـ">
+            <button onclick="toggleEmoji()" style="background:none; border:1px solid gold; color:gold; border-radius:50%; width:40px;">😊</button>
+        </div>
+    </div>
+
+    <script>
+        function initKingdom() {
+            setInterval(() => { document.getElementById('royal-clock').innerText = "🕒 " + new Date().toLocaleTimeString('en-GB'); }, 1000);
+            createStars(); loadEmojis();
+            new Audio('https://www.soundjay.com/human/sounds/trumpet-fanfare-01.mp3').play().catch(e=>{});
+        }
+        function createStars() {
+            const container = document.getElementById('star-container');
+            for (let i = 0; i < 100; i++) {
+                const s = document.createElement('div'); s.className = 'star';
+                s.style.width = s.style.height = Math.random()*3+'px';
+                s.style.left = Math.random()*100+'vw'; s.style.top = Math.random()*100+'vh';
+                s.style.setProperty('--duration', Math.random()*3+2+'s'); container.appendChild(s);
+            }
+        }
+        function toggleEmoji() { const el = document.getElementById('emoji-list'); el.style.display = (el.style.display==='none'?'grid':'none'); }
+        function loadEmojis() {
+            const el = document.getElementById('emoji-list');
+            for (let i = 0x1F600; i <= 0x1F64F; i++) {
+                let s = document.createElement('span'); s.innerText = String.fromCodePoint(i);
+                s.onclick = () => { document.getElementById('msg-in').value += s.innerText; };
+                el.appendChild(s);
+            }
+        }
+        function send() {
+            const inp = document.getElementById('msg-in');
+            if(inp.value.trim()) {
+                renderMessage({u: "علوش", t: "꧁ " + inp.value + " ꧂", time: new Date().toLocaleTimeString()});
+                triggerEffects(); inp.value = "";
+            }
+        }
+        function triggerEffects() {
+            document.getElementById('flash').classList.add('flash-active');
+            document.body.classList.add('shake-active');
+            new Audio('https://www.soundjay.com/nature/thunder-storm-01.mp3').play();
+            setTimeout(() => { document.getElementById('flash').classList.remove('flash-active'); document.body.classList.remove('shake-active'); }, 1000);
+        }
+        function renderMessage(d) {
+            const box = document.getElementById('messages');
+            const div = document.createElement('div');
+            div.className = 'line royal-carpet';
+            div.innerHTML = `<b class="royal-name"><span class="laawat">𓆩</span> 👑 ${d.u} <span class="laawat">𓆪</span>:</b> <span>${d.t}</span>`;
+            box.appendChild(div); box.scrollTop = box.scrollHeight;
+        }
+    </script>
+</body>
+</html>
